syntax="proto3";
option java_package="ma.enset.stubs";

service BankService{
  rpc convert(ConvertCurrencyRequest) returns (ConvertCurrencyResponse);//Unary Model
  rpc getCurrencyStream(ConvertCurrencyRequest) returns(stream ConvertCurrencyResponse);//Server streaming Model
  rpc perFormStream(stream ConvertCurrencyRequest) returns(ConvertCurrencyResponse);//Client streaming Model
  rpc fullCurencyStream(stream ConvertCurrencyRequest) returns(stream ConvertCurrencyResponse);//Bidirectionnel stream Model
}

message ConvertCurrencyRequest{
  string currencyFrom=1;
  string currencyTo=2;
  double amount = 3;
}

message ConvertCurrencyResponse{
  string currencyFrom=1;
  string currencyTo=2;
  double amount = 3;
  double result = 4;
}